# learn_godot

./: .gitignore  CMakeLists.txt  MainScene.tscn  SConstruct  project.godot
learn_godot/: HUD.gdns  HUD.tscn  Main.gdns  Main.tscn  MainScene.tscn  Mob.gdns  Mob.tscn  Player.gdns  Player.tscn  project.godot
src/: debug_godot.cpp  debug_godot.h  entry.cpp  gdexample.cpp  gdexample.h  gdlibrary.cpp  hud.cpp  hud.hpp  main.cpp  main.hpp  mob.cpp  mob.hpp  player.cpp  player.hpp
